update driveFunction; update docs

--- a/docs/功能详细说明.md
+++ b/docs/功能详细说明.md
@@ -4,7 +4,7 @@
 >  -> 这是一句指令/事件示例  
 >  <- 这是bot对该指令/事件的回复
 
-本插件的功能说明将按模块划分来介绍。而每个模块内的功能，按照触发方式又可划分为：指令触发、事件触发、定时触发。
+插件的功能说明将按模块划分来介绍。而每个模块内的功能，按照触发方式又可划分为：指令触发、事件触发、定时触发。
 
 ### 1.1 指令触发
 
@@ -12,9 +12,11 @@
 
 > <指令前缀><指令名> <子指令> <指令参数列表>
 
-所有指令都统一使用`<角色名>`作为`<指令名>`。
+本框架的指令都统一使用`<角色名>`（详见本框架“角色”相关说明）作为`<指令名>`。也就是说后续说明中，指令的语法均形如：
 
-例如，在阿米娅插件中约定了<角色名>="阿米娅"，则指令为：
+> /<角色名> <子指令> <指令参数列表>
+
+对于具体插件，代入那个插件`<角色名>`。例如，在阿米娅插件中约定了<角色名>="阿米娅"，则对于<子指令>="微博订阅"，其语法为：
 >  -> /阿米娅 微博订阅 <arg1>
 
 ### 1.2 事件触发
