--- a/docs/功能基础说明.md
+++ b/docs/功能基础说明.md
@@ -10,11 +10,11 @@
 
 指令语法基于mirai-console的Command规则和配置，默认配置的指令前缀为`/`。
 
-> /<指令名> <子指令名> <参数列表>
+> /<主指令名> <子指令名> <参数列表>
 
 #### 用户级指令
 
-对于本框架，统一将具体插件手册里说明的`<角色名>`代入到`<指令名>`。
+对于本框架，统一将具体插件手册里说明的`<角色名>`代入到`<主指令名>`。
 
 例如，在阿米娅插件中，代入<角色名>="阿米娅"。对于具体功能，代入 <子指令>="微博订阅"，<参数1>="明日方舟朝陇山" ，实际指令语句为：
 > /阿米娅 微博订阅 明日方舟朝陇山
@@ -23,10 +23,10 @@
 
 此处的管理级指的是允许修改插件配置的人，而不是群管理员。
 
-`<指令名>`由具体模块决定，不再是`<角色名>`。
+`<主指令名>`由具体模块决定。
 
-例如，对于权限助手模块，实际指令语句为：
-> /权限助手 群开关 true 123456
+例如，对于权限助手模块，主指令为`<角色名>权限助手`。代入<角色名>="阿米娅"，实际指令语句为：  
+> /阿米娅权限助手 群开关 true 123456
 
 ### 1.2 事件触发
 
