--- a/docs/权限设计细节.md
+++ b/docs/权限设计细节.md
@@ -25,20 +25,20 @@
  |- hundun.fleet.amiya:*                  
  |  |- hundun.fleet.amiya:command.*       
  |  |  |- hundun.fleet.amiya:command.admin*
- |  |  |  |- hundun.fleet.amiya:command.权限助手
+ |  |  |  |- hundun.fleet.amiya:command.阿米娅权限助手
  |  |  |- hundun.fleet.amiya:command.user*
  |  |  |  |- hundun.fleet.amiya:command.阿米娅
  |  |- hundun.fleet.amiya:cos.instance
 ```
 
-`hundun.fleet.amiya:command.权限助手`决定了被授权对象是否能使用“/权限助手”（必要不充分）
+`hundun.fleet.amiya:command.权限助手`决定了被授权对象是否能使用“/阿米娅权限助手”（必要不充分）
 `hundun.fleet.amiya:command.阿米娅`决定了被授权对象是否能使用“/阿米娅”（必要不充分）
-`hundun.fleet.amiya:cos.instance`决定了被授权对象是否扮演这个插件的角色。
+`hundun.fleet.amiya:cos.instance`决定了被授权对象是否对插件的角色扮演（用户级功能）进行响应。
 
 当（bot 123456，群7891011）的群开关设为 启用，表示：
 
 - `hundun.fleet.amiya:command.user*`授予`m7891011.*`，即群7891011的群友有权使用“/阿米娅”
-- `hundun.fleet.amiya:cos.instance`授予`m7891011.123456`，即bot 123456对群7891011进行响应。
+- `hundun.fleet.amiya:cos.instance`授予`m7891011.123456`，即bot 123456对群7891011的用户级功能进行响应。
 
 禁用群开关则撤销上述权限。
 
