--- a/docs/权限设计细节.md
+++ b/docs/权限设计细节.md
@@ -3,15 +3,15 @@
 **一般性的：**
 
 ```
- |- ……:*                  
- |  |- ……:command.*       
- |  |  |- ……:command.admin*
- |  |  |  |- ……:command.Foo1
- |  |  |  |- ……:command.Foo2
- |  |  |- ……:command.user*
- |  |  |  |- ……:command.Bar1
- |  |  |  |- ……:command.Bar2
- |  |- ……:cos.instance
+ |- the.plugin.id:*                  
+ |  |- the.plugin.id:command.*       
+ |  |  |- the.plugin.id:command.admin*
+ |  |  |  |- the.plugin.id:command.Foo1
+ |  |  |  |- the.plugin.id:command.Foo2
+ |  |  |- the.plugin.id:command.user*
+ |  |  |  |- the.plugin.id:command.Bar1
+ |  |  |  |- the.plugin.id:command.Bar2
+ |  |- the.plugin.id:cos.instance
 ```
 
 插件根权限下分出`指令根权限(command.*)`和`角色扮演权限(cos.instance)`。
