Reminder功能移出为独立项目

--- a/docs/功能基础说明.md
+++ b/docs/功能基础说明.md
@@ -14,16 +14,14 @@
 
 #### 用户级指令
 
-`<主指令名>`由`config\具体插件id\proxyConfigRepository.json`里的`primaryName`决定。
+对于用户级指令，`<主指令名>`由`config\具体插件id\proxyConfigRepository.json`里的`primaryName`决定。
 
 例如，在阿米娅插件中，`proxyConfigRepository.json`里的`primaryName`默认为 "阿米娅" 。对于具体功能，代入 <子指令>="微博订阅"，<参数1>="明日方舟朝陇山" ，实际指令语句为：
 > /阿米娅 微博订阅 明日方舟朝陇山
 
 #### 管理级指令
 
-此处的管理级指的是允许修改插件配置的人，而不是群管理员。
-
-`<主指令名>`由具体模块决定。不受`proxyConfigRepository.json`里的`primaryName`控制。
+对于管理级指令，`<主指令名>`由具体模块决定。不受`proxyConfigRepository.json`里的`primaryName`控制。
 
 例如，对于权限助手模块，主指令为`<角色名>权限助手`。代入<角色名>="阿米娅"，实际指令语句为：  
 > /阿米娅权限助手 群开关 true 123456
