拆分出SessionDataMap；整理3类指令实现和文档

--- a/docs/功能基础说明.md
+++ b/docs/功能基础说明.md
@@ -14,17 +14,38 @@
 
 #### 用户级指令
 
-对于用户级指令，`<主指令名>`由`config\具体插件id\proxyConfigRepository.json`里的`primaryName`决定。
+对于用户级指令，`<主指令名>`等于`config\具体插件id\proxyConfigRepository.json`里的`primaryName`。
 
-例如，在阿米娅插件中，`proxyConfigRepository.json`里的`primaryName`默认为 "阿米娅" 。对于具体功能，代入 <子指令>="微博订阅"，<参数1>="明日方舟朝陇山" ，实际指令语句为：
+例如，在阿米娅插件中，`proxyConfigRepository.json`里的`primaryName`默认为 "阿米娅"。代入后实际指令语句为：  
+> /阿米娅 ……
+
+以具体功能为例，代入 <子指令>="微博订阅"，<参数1>="明日方舟朝陇山" ，实际指令语句为：
 > /阿米娅 微博订阅 明日方舟朝陇山
+
+授权方式：权限助手模块里`群开关`开启后，则该群的所有群员获得所有用户级指令权限。
 
 #### 管理级指令
 
-对于管理级指令，`<主指令名>`由具体模块决定。不受`proxyConfigRepository.json`里的`primaryName`控制。
+对于管理级指令，`<主指令名>`由具体模块决定，且代入`<角色名>`，不受配置文件里的`primaryName`影响。
 
-例如，对于权限助手模块，主指令为`<角色名>权限助手`。代入<角色名>="阿米娅"，实际指令语句为：  
-> /阿米娅权限助手 群开关 true 123456
+例如，对于权限助手模块，`<主指令名>`等于`<角色名>权限助手`。代入后实际指令语句为：  
+> /阿米娅权限助手 ……
+
+授权方式：人工通过perm指令授予
+> 对具体指令“阿米娅权限助手”授权样例：  
+> /perm permit u114514 hundun.fleet.amiya:command.阿米娅权限助手   
+> 
+> 对所有管理级指令授权样例：  
+> /perm permit u114514 hundun.fleet.amiya:command.admin*   
+
+#### Debug级指令
+
+仅限Console环境输入，所以不需关心权限和授权。每个模块可能若干个Debug级指令，例如让某个定时功能视为满足时间条件（立刻触发），用来调试执行效果。
+
+对于Debug级指令，`<主指令名>`由具体模块决定，且代入`<角色名>`，不受配置文件里的`primaryName`影响。
+
+例如，对于微博模块中的Debug级指令，`<主指令名>`等于`<角色名>WeiboFunctionDebug`。代入后实际指令语句为：
+> /阿米娅WeiboFunctionDebug ……
 
 ### 1.2 事件触发
 
