--- a/docs/权限设计细节.md
+++ b/docs/权限设计细节.md
@@ -43,8 +43,28 @@
 禁用群开关则撤销上述权限。
 
 
+#### 为何设计仅用户级指令受配置文件里的primaryName影响
 
+当`primaryName`变化时，权限节点也会对应变化。
 
+因为ProxyCommand的权限属于`command.user*`，故变化后用户不受影响。
+
+>  |  |  |- hundun.fleet.amiya:command.user*
+>  |  |  |  |- hundun.fleet.amiya:command.阿米娅
+>  |  |  |  |- hundun.fleet.amiya:command.custom阿米娅1
+
+>  hundun.fleet.amiya:command.user*:  
+>    - m114514  
+
+而管理级指令由用户手工授权，允许细分授权，变化后用户受影响。
+
+>  |  |  |- hundun.fleet.amiya:command.admin*
+>  |  |  |  |- hundun.fleet.amiya:command.阿米娅权限助手
+>  |  |  |  |- hundun.fleet.amiya:command.custom阿米娅1权限助手
+
+>  hundun.fleet.amiya:command.阿米娅权限助手:  
+>    - u114514  
+>  hundun.fleet.amiya:command.custom阿米娅1权限助手: []
 
 
 ## (旧版说明：内容细节已过时，但设计思路可参考)
